paginatin & lazy loading for companies
