# src/main/java/com/snb/ms/company/CompanyController.java
@@ -1,7 +1,6 @@
 package com.snb.ms.company;
 
 import com.snb.ms.exception.ResourceNotFoundException;
-import com.snb.ms.shared.PaginatedResponseDTO;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
@@ -24,13 +23,30 @@ public class CompanyController implements CompanyApi {
 
     @Override
     @GetMapping
-    public PaginatedResponseDTO<CompanyResponse> findAll(@Valid @ModelAttribute CompanyListQuery query) {
-        log.debug("Received request to fetch companies: page={}, size={}, sortBy={}, sortDirection={}, includeSalesmen={}",
+    public CompanyPageResponse findAll(@Valid @ModelAttribute CompanyListQuery query) {
+        log.debug("Received request to fetch companies (offset pagination): page={}, size={}, sortBy={}, sortDirection={}, includeSalesmen={}",
             query.getPage(), query.getSize(), query.getSortBy(), query.getSortDirection(), query.getIncludeSalesmen());
+
         Page<CompanyResponse> companies = companyService.findAll(query);
         log.info("Fetched companies: page={}, size={}, returned={}, total={}",
             companies.getNumber(), companies.getSize(), companies.getNumberOfElements(), companies.getTotalElements());
-        return PaginatedResponseDTO.fromPage(companies);
+        return CompanyPageResponse.fromOffsetPage(companies);
+    }
+
+    @GetMapping("/lazy")
+    public CompanyPageResponse findAllLazy(@Valid @ModelAttribute CompanyListQuery query) {
+        log.debug("Received request to fetch companies (cursor lazy loading): cursor={}, limit={}, sortBy={}, sortDirection={}, includeSalesmen={}",
+            query.getCursor(), query.getLimit(), query.getSortBy(), query.getSortDirection(), query.getIncludeSalesmen());
+
+        CompanyService.CompanyCursorSlice companies = companyService.findAllLazy(query);
+        log.info("Fetched companies (cursor mode): limit={}, returned={}, hasNext={}, nextCursor={}",
+            companies.getLimit(), companies.getData().size(), companies.isHasNext(), companies.getNextCursor());
+        return CompanyPageResponse.fromCursor(
+            companies.getData(),
+            companies.getLimit(),
+            companies.isHasNext(),
+            companies.getNextCursor()
+        );
     }
 
     @Override
